--- a/source/_assets/sass/components/_docs.scss
+++ b/source/_assets/sass/components/_docs.scss
@@ -1,6 +1,6 @@
 .docs {
   background-color : #ffffff;
-  height           : 100%;
+  min-height           : 100%;
   display          : flex;
   flex-wrap        : nowrap;
 
@@ -8,7 +8,7 @@
     background-color : #fbfbfb;
     width            : 360px;
     display          : inline-block;
-    height           : 100%;
+    min-height           : 100%;
     flex-grow        : 0;
     flex-shrink      : 0;
 
@@ -43,9 +43,9 @@
   &__content {
     padding     : 37px 62px;
     display     : inline-block;
-    flex-shrink : 0;
+    flex-shrink : 1;
     flex-grow   : 1;
-    height      : 100%;
+    min-height      : 100%;
 
     .header--link {
       text-decoration : none;
