--- a/source/_assets/sass/components/_navigation.scss
+++ b/source/_assets/sass/components/_navigation.scss
@@ -27,6 +27,10 @@
       background  : #00a27c;
       color       : #ffffff;
       font-weight : 700;
+
+      & + .nav__items {
+        display : block!important;
+      }
     }
   }
 
@@ -62,6 +66,10 @@
         background  : none;
         font-weight : 400;
       }
+
+      & + .nav__items {
+        margin-left    : 20px;
+      }
     }
 
     .nav__title {
@@ -71,8 +79,12 @@
       color           : #000000;
       text-decoration : none;
 
-      &--active + .nav__items {
-        display : block;
+      &--active {
+        color : #00a27c;
+
+        & + .nav__items {
+          display : block;
+        }
       }
     }
   }
