deploy: Pushing for deployment

--- a/build_production/docs/current/components/container/index.html
+++ b/build_production/docs/current/components/container/index.html
@@ -71,8 +71,8 @@
            class="nav__title nav__title--active"
            path="docs/current/components/container" prefix="/docs/current/components">Components</a>
         <div class="nav__items">
-                                                <a href="{&quot;path&quot;:&quot;\/docs\/current\/components\/container&quot;}"
-                       class="nav__item ">Container</a>
+                                                <a href="/docs/current/components/container"
+                       class="nav__item nav__item--active">Container</a>
                                     </div>
     </div>
 
