--- a/build_production/docs/current/components/index.html
+++ b/build_production/docs/current/components/index.html
@@ -71,7 +71,7 @@
            class="nav__title nav__title--active"
            path="docs/current/components" prefix="/docs/current/components">Components</a>
         <div class="nav__items">
-                                                <a href="{&quot;path&quot;:&quot;\/docs\/current\/components\/container&quot;}"
+                                                <a href="/docs/current/components/container"
                        class="nav__item ">Container</a>
                                     </div>
     </div>
