--- a/source/_assets/sass/main.scss
+++ b/source/_assets/sass/main.scss
@@ -6,8 +6,12 @@
 @import "base";
 
 // Components
+@import "components/utility";
 @import "components/container";
 @import "components/buttons";
+@import "components/tags";
 @import "components/header";
 @import "components/hero";
+@import "components/section";
+@import "components/packages";
 
