--- a/source/_assets/sass/components/_hero.scss
+++ b/source/_assets/sass/components/_hero.scss
@@ -1,24 +1,18 @@
 .hero {
-  background-color : var(--secondary-bg);
-
-  .container {
-    display         : flex;
-    flex        : {
-      direction : row;
-      grow      : 0;
-    }
-    align-items     : start;
-    justify-content : space-between;
-  }
+  margin-top       : 0 !important;
 
   &__text {
     max-width   : 50%;
-    margin-top  : 1rem;
+    margin   : {
+      top    : 3rem;
+      bottom : 3rem;
+    }
     font     : {
       size   : 1.4rem;
       weight : 400;
     }
     line-height : 2rem;
+    order       : 1;
 
     @include respond-to-max('md') {
       max-width     : 100%;
@@ -31,6 +25,7 @@
         weight : 700;
       }
       margin   : {
+        top    : 0;
         bottom : 1rem;
       }
       line-height : 3.8rem;
@@ -40,6 +35,12 @@
           top  : 1rem;
         }
       }
+    }
+
+    @include respond-to-max('lg') {
+      max-width : 100%;
+      width     : 100%;
+      order     : 2;
     }
 
     &-controls {
@@ -66,9 +67,16 @@
       bottom : -7rem;
     }
     overflow  : visible;
+    order     : 2;
 
-    @include respond-to-max('md') {
+    @include respond-to-max('sm') {
       display : none;
+    }
+
+    @include respond-to-max('lg') {
+      max-width : 100%;
+      width     : 100%;
+      order     : 1;
     }
   }
 
