--- a/source/_assets/sass/components/_packages.scss
+++ b/source/_assets/sass/components/_packages.scss
@@ -18,12 +18,7 @@
       direction : row;
       grow      : 0;
     }
-    padding  : {
-      top    : 1rem;
-      bottom : 1rem;
-      left   : 2rem;
-      right  : 2rem;
-    }
+    padding          : 1.6rem;
     justify-content  : flex-start;
     align-items      : center;
     overflow         : hidden;
@@ -47,6 +42,14 @@
       @include respond-to-max('md') {
         text-align : left;
         width      : unset;
+      }
+    }
+
+    &__description {
+      p {
+        &:first-of-type {
+          margin-top : 0;
+        }
       }
     }
 
